--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,26 +1,35 @@
 {
-	"$schema": "./node_modules/oxlint/configuration_schema.json",
-	"plugins": ["eslint", "jsdoc", "jsx-a11y", "oxc", "typescript", "unicorn", "vitest", "vue"],
-	"categories": {
-		"correctness": "error",
-		"suspicious": "warn",
-		"pedantic": "off"
-	},
-	"rules": {
-		"typescript/no-explicit-any": "warn",
-		"unicorn/filename-case": "off"
-	},
-	"env": {
-		"browser": true,
-		"es2021": true,
-		"node": true
-	},
-	"ignorePatterns": [
-		"dist/",
-		"dist-ssr/",
-		"coverage/",
-		"node_modules/",
-		".vitepress/cache/",
-		"docs/.vitepress/"
-	]
+  "$schema": "./node_modules/oxlint/configuration_schema.json",
+  "plugins": [
+    "eslint",
+    "jsdoc",
+    "jsx-a11y",
+    "oxc",
+    "typescript",
+    "unicorn",
+    "vitest",
+    "vue"
+  ],
+  "categories": {
+    "correctness": "error",
+    "suspicious": "warn",
+    "pedantic": "off"
+  },
+  "rules": {
+    "typescript/no-explicit-any": "warn",
+    "unicorn/filename-case": "off"
+  },
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "ignorePatterns": [
+    "**/dist/",
+    "**/dist-ssr/",
+    "**/coverage/",
+    "**/node_modules/",
+    "**/.vitepress/cache/",
+    "**/docs/.vitepress/"
+  ]
 }
