--- a/package.json
+++ b/package.json
@@ -1,90 +1,20 @@
 {
-	"name": "@mrksbnc/bamboo",
-	"version": "1.0.4",
-	"type": "module",
-	"exports": {
-		"./components": {
-			"types": "./dist/components/index.d.ts",
-			"require": "./dist/components.cjs",
-			"import": "./dist/components.js"
-		},
-		"./core": {
-			"types": "./dist/core/index.d.ts",
-			"require": "./dist/core.cjs",
-			"import": "./dist/core.js"
-		},
-		"./lib.css": {
-			"import": "./dist/lib.css",
-			"require": "./dist/lib.css"
-		}
-	},
-	"files": [
-		"dist",
-		"README.md",
-		"LICENSE"
-	],
-	"publishConfig": {
-		"registry": "https://npm.pkg.github.com"
-	},
-	"scripts": {
-		"build": "vite build --mode production",
-		"test": "vitest --coverage",
-		"type-check": "vue-tsc --noEmit",
-		"lint:oxlint": "oxlint . --fix --config .oxlintrc.json",
-		"lint:spell": "cspell . --cache --config cspell.yaml --verbose",
-		"lint:style": "stylelint \"**/*.{vue,css,scss}\" --fix --config stylelint.config.js",
-		"lint": "run-s lint:*",
-		"format": "prettier --write .",
-		"prepare": "husky",
-		"prepublishOnly": "pnpm build",
-		"docs:dev": "vitepress dev",
-		"docs:build": "vitepress build",
-		"docs:preview": "vitepress preview"
-	},
-	"dependencies": {
-		"vue": "^3.5.25"
-	},
-	"devDependencies": {
-		"@cspell/dict-vue": "^3.0.5",
-		"@prettier/plugin-oxc": "^0.1.3",
-		"@semantic-release/changelog": "^6.0.3",
-		"@semantic-release/commit-analyzer": "^13.0.1",
-		"@semantic-release/git": "^10.0.1",
-		"@semantic-release/github": "^12.0.2",
-		"@semantic-release/release-notes-generator": "^14.1.0",
-		"@tsconfig/node22": "^22.0.5",
-		"@types/jsdom": "^27.0.0",
-		"@types/node": "^25.0.2",
-		"@vitejs/plugin-vue": "^6.0.3",
-		"@vitest/coverage-v8": "4.0.15",
-		"@vue/test-utils": "^2.4.6",
-		"@vue/tsconfig": "^0.8.1",
-		"conventional-changelog-conventionalcommits": "^9.1.0",
-		"cspell": "^9.4.0",
-		"husky": "^9.1.7",
-		"jiti": "^2.6.1",
-		"jsdom": "^27.3.0",
-		"npm-run-all2": "^8.0.4",
-		"oxlint": "~1.33.0",
-		"oxlint-tsgolint": "^0.9.1",
-		"postcss-html": "^1.8.0",
-		"prettier": "3.7.4",
-		"prettier-plugin-organize-imports": "^4.3.0",
-		"sass-embedded": "^1.96.0",
-		"semantic-release": "^25.0.2",
-		"start-server-and-test": "^2.1.3",
-		"stylelint": "^16.26.1",
-		"stylelint-config-standard": "^39.0.1",
-		"stylelint-config-standard-scss": "^16.0.0",
-		"stylelint-config-standard-vue": "^1.0.0",
-		"typescript": "~5.9.3",
-		"vite": "npm:rolldown-vite@latest",
-		"vite-plugin-dts": "^4.5.4",
-		"vite-plugin-vue-devtools": "^8.0.5",
-		"vite-svg-loader": "^5.1.0",
-		"vitepress": "2.0.0-alpha.15",
-		"vitest": "^4.0.15",
-		"vue-tsc": "^3.1.8"
-	},
-	"packageManager": "pnpm@10.26.0"
+  "name": "my-turborepo",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "check-types": "turbo run check-types"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.4",
+    "turbo": "^2.7.2",
+    "typescript": "5.9.2"
+  },
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18"
+  }
 }
