--- a/packages/bamboo-vue/cspell.yaml
+++ b/packages/bamboo-vue/cspell.yaml
@@ -1,21 +1,21 @@
 $schema: https://raw.githubusercontent.com/streetsidesoftware/cspell/main/cspell.schema.json
-version: '0.2'
+version: "0.2"
 useGitignore: true
 language: en-gb,en-us,lorem,lorem-ipsum
 
 ignorePaths:
-  - 'node_modules/**'
-  - 'dist/**'
-  - 'build/**'
-  - 'coverage/**'
-  - '.github/**'
-  - '.husky/**'
-  - '.vscode/**'
-  - '.vitepress/**'
-  - 'pnpm-lock.yaml'
-  - 'pnpm-workspace.yaml'
-  - 'config/cspell/**'
-  - 'CHANGELOG.md'
+  - "node_modules/**"
+  - "dist/**"
+  - "build/**"
+  - "coverage/**"
+  - ".github/**"
+  - ".husky/**"
+  - ".vscode/**"
+  - ".vitepress/**"
+  - "pnpm-lock.yaml"
+  - "pnpm-workspace.yaml"
+  - "config/cspell/**"
+  - "CHANGELOG.md"
 
 dictionaryDefinitions:
   - name: common-terms
@@ -43,4 +43,4 @@ languageSettings:
     caseSensitive: true
 
 import:
-  - '@cspell/dict-vue/cspell-ext.json'
+  - "@cspell/dict-vue/cspell-ext.json"
