--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,3 @@
-onlyBuiltDependencies:
-  - '@parcel/watcher'
-  - esbuild
-
-overrides:
-  glob@>=10.2.0 <10.5.0: '>=10.5.0'
-  js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
-  mdast-util-to-hast@>=13.0.0 <13.2.1: '>=13.2.1'
+packages:
+  - "apps/*"
+  - "packages/*"
